@@ -3,6 +3,7 @@ Changelog
 
 4.14-dev - (unreleased)
 -----------------------
+ * Feature: Enabled the EEA relation widget on highlights types [demarant #4705]
  * Change: Made field visibilityLevel hidden by default and visible only
            for articles where we use it for frontpage feature article. [demarant]
  * Bug fix: Fixed Content-Disposition for PDF files [voineali #4898]
